--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -382,6 +382,7 @@
          This needs to be set after the SDK targets have been imported.
     -->
     <PrepareForBuildDependsOn>$(PrepareForBuildDependsOn);GetCFamilyFiles</PrepareForBuildDependsOn>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <Target Name="GetCFamilyFiles">
