Added more specific binding failure messages

--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -38,11 +38,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Binding\BindingStrings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>BindingStrings.resx</DependentUpon>
+    </Compile>
     <Compile Update="Resources\Strings.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Update="Binding\BindingStrings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>BindingStrings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\Strings.resx">
       <!-- Note: must be public so the resources are visible to XAML -->
       <Generator>PublicResXFileCodeGenerator</Generator>
