--- a/SonarQube.Client.Tests/SonarQube.Client.Tests.csproj
+++ b/SonarQube.Client.Tests/SonarQube.Client.Tests.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="6.0.8" />
     <PackageReference Include="Google.Protobuf" Version="3.6.1" />
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
