Move SonarLint.xml to build.props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -14,4 +14,11 @@
     <DefineConstants>$(DefineConstants);SignAssembly</DefineConstants>
   </PropertyGroup>
 
+  <ItemGroup Label="Common items">
+    <AdditionalFiles Include="$(MSBuildThisFileDirectory).sonarlint\sonarlint-visualstudio\CSharp\SonarLint.xml">
+      <Link>Properties\SonarLint.xml</Link>
+    </AdditionalFiles>
+  </ItemGroup>
+
+
 </Project>
