--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -439,7 +439,7 @@
   -->
   <PropertyGroup>
     <!-- Only check the VS2019 build -->
-    <AsmRefDisableBaselining Condition=" $(VsTargetVersion) != '2019' ">true</AsmRefDisableBaselining>
+    <!--<AsmRefDisableBaselining Condition=" $(VsTargetVersion) != '2019' ">true</AsmRefDisableBaselining>-->
     
     <!-- The version patch number changes in the CI every build so we ignore it when comparing versions -->
     <AsmRefSourceVersionCompatibility>strict</AsmRefSourceVersionCompatibility>
@@ -447,6 +447,7 @@
     <AsmRefTargetVersionCompatibility>strict</AsmRefTargetVersionCompatibility>
     
     <!-- Use the baseline file containing public key tokens if the assemblies are being strong-named -->
+    <AsmRefBaselineFilePath>$(MSBuildProjectDirectory)\AsmRef_$(MSBuildProjectName)_Baseline.txt</AsmRefBaselineFilePath>
     <AsmRefBaselineFilePath Condition=" $(SignAssembly) == 'true' ">$(MSBuildProjectDirectory)\AsmRef_$(MSBuildProjectName)_Baseline_Signed.txt</AsmRefBaselineFilePath>
 
     <!-- Include SonarLint assemblies, the SonarQube.Client library, and the analyzers-->
