--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -460,7 +460,7 @@
     </PackageReference>
   </ItemGroup>
 
-  <Target Name="OutputAsmRef">
+  <Target Name="OutputAsmRef" AfterTargets="Build">
     <Exec Command="type $(MSBuildProjectDirectory)\AsmRef_$(MSBuildProjectName)_Baseline_Signed.txt"/>
     <Exec Command="type $(MSBuildProjectDirectory)\AsmRef_$(MSBuildProjectName)_Baseline_Latest.txt"/>
   </Target>
