--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -452,6 +452,7 @@
 
     <!-- Include SonarLint assemblies, the SonarQube.Client library, and the analyzers-->
     <AsmRefIncludePatterns>Sonar*</AsmRefIncludePatterns>
+    <AsmRefExcludePatterns>Microsoft.Alm.Authentication</AsmRefExcludePatterns>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Devtility.CheckAsmRefs" Version="0.10.0-rc">
