--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -442,9 +442,9 @@
     <AsmRefDisableBaselining Condition=" $(VsTargetVersion) != '2019' ">true</AsmRefDisableBaselining>
     
     <!-- The version patch number changes in the CI every build so we ignore it when comparing versions -->
-    <AsmRefSourceVersionCompatibility>any</AsmRefSourceVersionCompatibility>
+    <AsmRefSourceVersionCompatibility>Strict</AsmRefSourceVersionCompatibility>
    
-    <AsmRefTargetVersionCompatibility>any</AsmRefTargetVersionCompatibility>
+    <AsmRefTargetVersionCompatibility>Strict</AsmRefTargetVersionCompatibility>
     
     <!-- Use the baseline file containing public key tokens if the assemblies are being strong-named -->
     <AsmRefBaselineFilePath>$(MSBuildProjectDirectory)\AsmRef_$(MSBuildProjectName)_Baseline.txt</AsmRefBaselineFilePath>
