--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -439,19 +439,19 @@
   -->
   <PropertyGroup>
     <!-- Only check the VS2019 build -->
-    <!--<AsmRefDisableBaselining Condition=" $(VsTargetVersion) != '2019' ">true</AsmRefDisableBaselining>-->
+    <!--<AsmRefDisableBaselining Condition=" $(VsTargetVersion) == '2017' OR $(VsTargetVersion) == '2015' ">true</AsmRefDisableBaselining>-->
     
     <!-- The version patch number changes in the CI every build so we ignore it when comparing versions -->
     <AsmRefSourceVersionCompatibility>MajorMinorBuild</AsmRefSourceVersionCompatibility>
    
     <AsmRefTargetVersionCompatibility>Strict</AsmRefTargetVersionCompatibility>
     
-    <!-- Use the baseline file containing public key tokens if the assemblies are being strong-named -->
     <AsmRefBaselineFilePath>$(MSBuildProjectDirectory)\AsmRef_$(MSBuildProjectName)_Baseline.txt</AsmRefBaselineFilePath>
-    <AsmRefBaselineFilePath Condition=" $(SignAssembly) == 'true' ">$(MSBuildProjectDirectory)\AsmRef_$(MSBuildProjectName)_Baseline_Signed.txt</AsmRefBaselineFilePath>
 
     <!-- Include SonarLint assemblies, the SonarQube.Client library, and the analyzers-->
-    <AsmRefIncludePatterns>Sonar*</AsmRefIncludePatterns>
+    <AsmRefIncludePatterns>Sonar* Microsoft.Alm.Authentication</AsmRefIncludePatterns>
+
+    <AsmRefIgnoreSourcePublicKeyToken>true</AsmRefIgnoreSourcePublicKeyToken>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Devtility.CheckAsmRefs" Version="0.10.0-rc">
