--- a/src/Integration.TeamExplorer.UnitTests/Integration.TeamExplorer.UnitTests.csproj
+++ b/src/Integration.TeamExplorer.UnitTests/Integration.TeamExplorer.UnitTests.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup Label="Specify which VS-specific refs are required">
+  <PropertyGroup Label="Specify which external/VS-specific refs are required">
     <IsTestProject>true</IsTestProject>
     <RequiresTeamFoundation>true</RequiresTeamFoundation>
     <RequiresRuleset>true</RequiresRuleset>
+    <RequiresAlmAuthentication>true</RequiresAlmAuthentication>
   </PropertyGroup>
   <Import Project="..\SonarLint.VSSpecificAssemblies.props" />
 
@@ -36,18 +37,6 @@
     <PackageReference Include="NuGet.Core" Version="2.12.0" />
     <PackageReference Include="NuGet.VisualStudio" Version="3.3.0" />
   </ItemGroup>
-
-  
-  <ItemGroup Label="Alm authentication">
-    <!-- The package from MS isn't signed so we need to reference the StrongName package
-         and conditionally set the DisableStrongName properties -->
-    <PackageReference Include="Microsoft.Alm.Authentication" Version="4.0.0.1" />
-    <PackageReference Include="StrongNamer" Version="0.0.8" />
-  </ItemGroup>
-  <PropertyGroup>
-      <DisableStrongNamer Condition="'$(SignAssembly)' != 'true'">true</DisableStrongNamer>
-  </PropertyGroup>
-
   
   <ItemGroup Label="Test framework">
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
