--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -404,22 +404,32 @@
   -->
   <PropertyGroup>
     <!-- Only check the VS2019 build -->
-    <AsmRefDisableBaselining Condition=" $(VersionSpecificSuffix) != '2019' " >true</AsmRefDisableBaselining>
+    <AsmRefDisableBaselining Condition=" $(VersionSpecificSuffix) != '2019' ">true</AsmRefDisableBaselining>
     
     <!-- The version patch number changes in the CI every build so we ignore it when comparing versions -->
     <AsmRefSourceVersionCompatibility>MajorMinorBuild</AsmRefSourceVersionCompatibility>
-
+    
     <AsmRefTargetVersionCompatibility>Strict</AsmRefTargetVersionCompatibility>
 
-    <!-- If we're strong-naming the binaries (i.e. on the CI machine) then do check strong-naming of our
-         assemblies. -->
-    <AsmRefIgnoreSourcePublicKeyToken Condition=" $(SignAssembly) == 'true' ">false</AsmRefIgnoreSourcePublicKeyToken>
-    <AsmRefIgnoreSourcePublicKeyToken Condition=" $(SignAssembly) == 'false' ">true</AsmRefIgnoreSourcePublicKeyToken>
 
     <!-- Include SonarLint assemblies, the SonarQube.Client library, and the analyzers-->
     <AsmRefIncludePatterns>Sonar*</AsmRefIncludePatterns>
+
+    <BaselineWithStrongNames>$(MSBuildProjectDirectory)\AsmRef_Integration.Vsix_Baseline_WithStrongNames.txt</BaselineWithStrongNames>
+    <BaselineWithoutStrongNames>$(MSBuildProjectDirectory)\AsmRef_Integration.Vsix_Baseline_WithoutStrongNames.txt</BaselineWithoutStrongNames>
   </PropertyGroup>
-  <ItemGroup>
+
+  <PropertyGroup Condition=" $(SignAssembly) == 'true'" >
+    <!-- Use the baseline file containing public key tokens if the assemblies are being strong-named -->
+    <AsmRefBaselineFilePath>$(BaselineWithStrongNames)</AsmRefBaselineFilePath>
+    <AsmRefIgnoreSourcePublicKeyToken>false</AsmRefIgnoreSourcePublicKeyToken>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" $(SignAssembly) == 'false'" >
+    <AsmRefBaselineFilePath>$(BaselineWithoutStrongNames)</AsmRefBaselineFilePath>
+    <AsmRefIgnoreSourcePublicKeyToken>true</AsmRefIgnoreSourcePublicKeyToken>
+  </PropertyGroup>
+  <ItemGroup>  
     <PackageReference Include="Devtility.CheckAsmRefs" Version="0.10.0-rc">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -432,28 +442,29 @@
   -->
   <Target Name="DumpOutputAsmRef" AfterTargets="_GenerateAsmRefReportOnBuild" BeforeTargets="_PostGenerateAndRefProcessing">
     <Message Importance="high" Text="Differences between AsmRef baseline and latest report:" />
-    <Exec Command="fc $(AsmRefBaselineFilePath) $(AsmRefOutputFilePath)" IgnoreExitCode="true"/>
+    <Exec Command="fc $(AsmRefBaselineFilePath) $(AsmRefOutputFilePath)" IgnoreExitCode="true" />
   </Target>
 
-  <Target Name="AddPublicKeyTokesnToUnsignedBaseline" AfterTargets="Build" Condition=" $(AsmRefUpdateBaseline) == 'true' AND $(SignAssembly) != 'true' ">
+  <Target Name="UpdateBaselineWithStrongNames" AfterTargets="Build" Condition=" $(AsmRefUpdateBaseline) == 'true' AND $(SignAssembly) != 'true' ">
     <!-- When the dev runs a local build with /p:AsmRefUpdateBaseline=true, the AsmRef NuGet package will generate a new baseline file
          that will not contain PKTs for our assemblies.
-         This target runs afterwards to update the baseline to include our PKTs. We do this so we can check against a strongly-named
+         This target runs afterwards to update the strong-named baseline to include our PKTs. We do this so we can check against a strongly-named
          baseline on the CI machine.
     -->
-    <Message Importance="high" Text="Updating AsmRef baseline: $(AsmRefBaselineFilePath)" />
+    <Message Importance="high" Text="Updating AsmRef baseline with strong-names:" />
+    <Message Importance="high" Text="  Baseline without strong-names: $(BaselineWithoutStrongNames)" />
+    <Message Importance="high" Text="  Baseline with strong-names: $(BaselineWithStrongNames)" />
 
     <PropertyGroup>
-      <NewSignedBaseLineText>$([System.IO.File]::ReadAllText($(AsmRefBaselineFilePath)))</NewSignedBaseLineText>
+      <NewSignedBaseLineText>$([System.IO.File]::ReadAllText($(BaselineWithoutStrongNames)))</NewSignedBaseLineText>
       <!-- Fix up the PublicKeyTokens -->
       <NewSignedBaseLineText>$(NewSignedBaseLineText.Replace("Microsoft.Alm.Authentication, Version=4.0.0.0, Culture=neutral, PublicKeyToken=null", "Microsoft.Alm.Authentication, Version=4.0.0.0, Culture=neutral, PublicKeyToken=e33b67d3bb5581e4"))</NewSignedBaseLineText>
       <NewSignedBaseLineText>$(NewSignedBaseLineText.Replace("PublicKeyToken=null", "PublicKeyToken=c5b62af9de6d7244"))</NewSignedBaseLineText>
     </PropertyGroup>
 
-    <Message Importance="high" Text="Updated signed baseline: $(NewSignedBaseLineText)" />
+    <Message Importance="high" Text="Updated baseline content: $(NewSignedBaseLineText)" />
 
-    <WriteLinesToFile File="$(AsmRefBaselineFilePath)" Overwrite="true" WriteOnlyWhenDifferent="true"
-                      Encoding="UTF-8" Lines="$(NewSignedBaseLineText)" />
+    <WriteLinesToFile File="$(BaselineWithStrongNames)" Overwrite="true" WriteOnlyWhenDifferent="true" Encoding="UTF-8" Lines="$(NewSignedBaseLineText)" />
   </Target>
 
 </Project>
