Fix MS.Alm.Auth package reference

--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -85,13 +85,13 @@
   <!--**********************************************************************-->
   <ItemGroup>
     <!-- Workaround for NuGet bug https://github.com/NuGet/Home/issues/2365 
-         EmbedInterAssemblies isn't set for PackagReferences. -->
+         EmbedInteropAssemblies isn't set for PackagReferences. -->
     <PackageReference Include="Microsoft.VisualStudio.SDK.EmbedInteropTypes" Version="15.0.27" />
   </ItemGroup>
 
-  <!-- The Alm.Auth assemblies aren't being included in the VSIX for some reason.
-       This workaround adds metadata to three artifacts so that the standard VSSDK targets will
-       include them.
+  <!-- The Alm.Auth assemblies aren't being included in the VSIX for some reason.	
+       This workaround adds metadata to three artifacts so that the standard VSSDK targets will	
+       include them.	
        NB the target is based on the one from Microsoft.VisualStudio.SDK.EmbedInteropTypes above. -->
   <Target Name="HackIncludeALMAuthInVsix" AfterTargets="ResolveReferences" BeforeTargets="FindReferenceAssembliesForReferences">
     <ItemGroup>
