--- a/src/SonarLint.VSSpecificAssemblies.props
+++ b/src/SonarLint.VSSpecificAssemblies.props
@@ -134,7 +134,7 @@
   <ItemGroup Label="Alm authentication" Condition="$(RequiresAlmAuthentication)=='true'">
     <!-- The package from MS isn't signed so we need to reference the StrongName package
          and conditionally set the DisableStrongName properties -->
-    <PackageReference Include="Microsoft.Alm.Authentication" Version="4.0.0.1" IncludeAssets="compile" />
+    <PackageReference Include="Microsoft.Alm.Authentication" Version="4.0.0.1" />
     <PackageReference Include="StrongNamer" Version="0.0.8" />
   </ItemGroup>
   <PropertyGroup Condition="$(RequiresAlmAuthentication)=='true'">
