--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup Label="Specify which VS-specific refs are required">
+  <PropertyGroup Label="Specify which external/VS-specific refs are required">
     <RequiresRuleset>true</RequiresRuleset>
+    <RequiresAlmAuthentication>true</RequiresAlmAuthentication>
   </PropertyGroup>
   <Import Project="..\SonarLint.VSSpecificAssemblies.props" />
 
@@ -60,19 +61,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="StrongNamer" Version="0.0.8" />
-  </ItemGroup>
-  <ItemGroup Label="Alm authentication">
-    <!-- The package from MS isn't signed so we need to reference the StrongName package
-         and conditionally set the DisableStrongName properties -->
-    <PackageReference Include="Microsoft.Alm.Authentication" Version="4.0.0.1" IncludeAssets="compile" />
-    <PackageReference Include="StrongNamer" Version="0.0.8" />
-  </ItemGroup>
-  <PropertyGroup>
-    <DisableStrongNamer Condition="'$(SignAssembly)' != 'true'">true</DisableStrongNamer>
-  </PropertyGroup>
-
-  <ItemGroup>
     <None Remove="Connection\UI\ConnectionInfoDialogView.xaml" />
     <None Remove="Connection\UI\OrganizationSelectionWindow.xaml" />
     <None Remove="Notifications\NotificationIndicator.xaml" />
@@ -97,13 +85,13 @@
   <!--**********************************************************************-->
   <ItemGroup>
     <!-- Workaround for NuGet bug https://github.com/NuGet/Home/issues/2365 
-         EmbedInterAssemblies isn't set for PackagReferences. -->
+         EmbedInteropAssemblies isn't set for PackagReferences. -->
     <PackageReference Include="Microsoft.VisualStudio.SDK.EmbedInteropTypes" Version="15.0.27" />
   </ItemGroup>
 
-  <!-- The Alm.Auth assemblies aren't being included in the VSIX for some reason.
-       This workaround adds metadata to three artifacts so that the standard VSSDK targets will
-       include them.
+  <!-- The Alm.Auth assemblies aren't being included in the VSIX for some reason.	
+       This workaround adds metadata to three artifacts so that the standard VSSDK targets will	
+       include them.	
        NB the target is based on the one from Microsoft.VisualStudio.SDK.EmbedInteropTypes above. -->
   <Target Name="HackIncludeALMAuthInVsix" AfterTargets="ResolveReferences" BeforeTargets="FindReferenceAssembliesForReferences">
     <ItemGroup>
