--- a/src/SonarLint.VSSpecificAssemblies.props
+++ b/src/SonarLint.VSSpecificAssemblies.props
@@ -139,6 +139,8 @@
   </ItemGroup>
   <PropertyGroup Condition="$(RequiresAlmAuthentication)=='true'">
     <DisableStrongNamer Condition="'$(SignAssembly)' != 'true'">true</DisableStrongNamer>
+    <!-- Tell the StrongNamer to use our key, if set. -->
+    <StrongNamerKeyFile>$(AssemblyOriginatorKeyFile)</StrongNamerKeyFile>
   </PropertyGroup>
 
 </Project>
